@@ -1,122 +1,103 @@
 package net.craftcitizen.imagemaps;
 
-import de.craftlancer.core.LambdaRunnable;
-import de.craftlancer.core.util.MessageLevel;
-import de.craftlancer.core.util.MessageUtil;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandSender;
-
-import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
-public class ImageMapDownloadCommand extends ImageMapSubCommand {
+import javax.imageio.ImageIO;
 
-    public ImageMapDownloadCommand(ImageMaps plugin) {
-        super("imagemaps.download", plugin, true);
-    }
+import org.bukkit.command.Command;
+import org.bukkit.command.CommandSender;
+
+import net.craftcitizen.imagemaps.clcore.LambdaRunnable;
+import net.craftcitizen.imagemaps.clcore.util.MessageLevel;
+import net.craftcitizen.imagemaps.clcore.util.MessageUtil;
+
+public class ImageMapDownloadCommand extends ImageMapSubCommand {
+    public ImageMapDownloadCommand(final ImageMaps plugin) { super("imagemaps.download", plugin, true); }
 
     @Override
-    protected String execute(CommandSender sender, Command cmd, String label, String[] args) {
-        if (!checkSender(sender)) {
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "You can't run this command.");
+    protected String execute(final CommandSender sender, final Command cmd, final String label, final String[] args) {
+        if (!this.checkSender(sender)) {
+            MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING, "You can't run this command.");
             return null;
         }
-
         if (args.length < 3) {
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING,
-                                    "You must specify a file name and a download link.");
+            MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING, "You must specify a file name and a download link.");
             return null;
         }
-
-        String filename = args[1];
-        String url = args[2];
-
+        final String filename = args[1];
+        final String url = args[2];
         if (filename.contains("/") || filename.contains("\\") || filename.contains(":")) {
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "Filename contains illegal character.");
+            MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING, "Filename contains illegal character.");
             return null;
         }
-
-        new LambdaRunnable(() -> download(sender, url, filename)).runTaskAsynchronously(plugin);
+        new LambdaRunnable(() -> this.download(sender, url, filename)).runTaskAsynchronously(this.plugin);
         return null;
     }
 
-    private void download(CommandSender sender, String input, String filename) {
+    private void download(final CommandSender sender, final String input, final String filename) {
         try {
-            URL srcURL = new URL(input);
-
+            final URL srcURL = URI.create(input).toURL();
             if (!srcURL.getProtocol().startsWith("http")) {
-                MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "Download URL is not valid.");
+                MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING, "Download URL is not valid.");
                 return;
             }
-
-            URLConnection connection = srcURL.openConnection();
-
+            final URLConnection connection = srcURL.openConnection();
             if (!(connection instanceof HttpURLConnection)) {
-                MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "Download URL is not valid.");
+                MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING, "Download URL is not valid.");
                 return;
             }
-
             connection.setRequestProperty("User-Agent", "ImageMaps/0");
-
             if (((HttpURLConnection) connection).getResponseCode() != 200) {
-                MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING,
-                                        String.format("Download failed, HTTP Error code %d.",
-                                                      ((HttpURLConnection) connection).getResponseCode()));
+                MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING,
+                        String.format("Download failed, HTTP Error code %d.", ((HttpURLConnection) connection).getResponseCode()));
                 return;
             }
-
-            String mimeType = connection.getHeaderField("Content-type");
-            if (!(mimeType.startsWith("image/"))) {
-                MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING,
-                                        String.format("Download is a %s file, not image.", mimeType));
+            final String mimeType = connection.getHeaderField("Content-type");
+            if (!mimeType.startsWith("image/")) {
+                MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING,
+                        String.format("Download is a %s file, not image.", mimeType));
                 return;
             }
-
-            try (InputStream str = connection.getInputStream()) {
-                BufferedImage image = ImageIO.read(str);
+            try (final InputStream str = connection.getInputStream()) {
+                final BufferedImage image = ImageIO.read(str);
                 if (image == null) {
-                    MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING,
-                                            "Downloaded file is not an image!");
+                    MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING, "Downloaded file is not an image!");
+                    if (str != null) {
+                        str.close();
+                    }
                     return;
                 }
-
-                File outFile = new File(plugin.getDataFolder(), "images" + File.separatorChar + filename);
-                boolean fileExisted = outFile.exists();
+                final File outFile = new File(this.plugin.getDataFolder(), "images" + File.separatorChar + filename);
+                final boolean fileExisted = outFile.exists();
                 ImageIO.write(image, "PNG", outFile);
-
                 if (fileExisted) {
-                    MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING,
-                                            "File already exists, overwriting!");
-                    getPlugin().reloadImage(filename);
+                    MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING, "File already exists, overwriting!");
+                    this.getPlugin().reloadImage(filename);
                 }
-            }
-            catch (IllegalArgumentException ex) {
-                MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "Received no data");
+            } catch (final IllegalArgumentException ex) {
+                MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING, "Received no data");
                 return;
             }
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.NORMAL, "Download complete.");
-        }
-        catch (MalformedURLException ex) {
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "Malformatted URL");
-        }
-        catch (IOException ex) {
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.ERROR,
-                                    "An IO Exception happened, see server log");
-            ex.printStackTrace();
+            MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.NORMAL, "Download complete.");
+        } catch (final MalformedURLException ex2) {
+            MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.WARNING, "Malformatted URL");
+        } catch (final IOException ex3) {
+            MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.ERROR, "An IO Exception happened, see server log");
+            ex3.printStackTrace();
         }
     }
 
     @Override
-    public void help(CommandSender sender) {
-        MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.NORMAL, "Downloads an image from an URL.");
-        MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.INFO,
-                                "Usage: /imagemap download <filename> <sourceURL>");
+    public void help(final CommandSender sender) {
+        MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.NORMAL, "Downloads an image from an URL.");
+        MessageUtil.sendMessage(this.getPlugin(), sender, MessageLevel.INFO, "Usage: /imagemap download <filename> <sourceURL>");
     }
 }
